style(mediafusion): Fixing Alignmnet in HMS Deactivate flow
DeActivate Flow in HMS wasn't aligned properly witht he heading,this will fix it.

--- a/app/modules/mediafusion/media-service-v2/settings/_settings.scss
+++ b/app/modules/mediafusion/media-service-v2/settings/_settings.scss
@@ -38,6 +38,10 @@
   height: 100%;
   width: 100%;
 }
+.media-model-align {
+  padding-top: .5rem;
+  padding-left: 1rem;
+}
 
 .media-modal-position {
   position: absolute;
